[gd_scene load_steps=18 format=3 uid="uid://dy2tgej8cwxe6"]

[ext_resource type="Texture2D" uid="uid://3xopgmjk5280" path="res://assets/sprites/slime_green.png" id="1_ot5il"]
[ext_resource type="Script" path="res://scripts/slime.gd" id="1_owmoe"]
[ext_resource type="PackedScene" uid="uid://detvyjag7513l" path="res://scenes/killzone.tscn" id="2_b0dun"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t8lpp"]
atlas = ExtResource("1_ot5il")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_snm8c"]
atlas = ExtResource("1_ot5il")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7p338"]
atlas = ExtResource("1_ot5il")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2oa1"]
atlas = ExtResource("1_ot5il")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1je3e"]
atlas = ExtResource("1_ot5il")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5eqrb"]
atlas = ExtResource("1_ot5il")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_u375i"]
atlas = ExtResource("1_ot5il")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wvsn"]
atlas = ExtResource("1_ot5il")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_8wme2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8lpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_snm8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7p338")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2oa1")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1je3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5eqrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u375i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wvsn")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vtkof"]
size = Vector2(10, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4t3sh"]
size = Vector2(14, 15)

[sub_resource type="Animation" id="Animation_alvql"]
resource_name = "death"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_uwyyc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xisum"]
_data = {
"RESET": SubResource("Animation_uwyyc"),
"death": SubResource("Animation_alvql")
}

[node name="Slime" type="Node2D"]
script = ExtResource("1_owmoe")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_8wme2")
animation = &"death"
autoplay = "default"

[node name="Killzone" parent="." instance=ExtResource("2_b0dun")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_vtkof")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -8)
target_position = Vector2(10, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -8)
target_position = Vector2(-10, 0)

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_4t3sh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xisum")
}

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
